--- a/index.html
+++ b/index.html
@@ -13,36 +13,48 @@
 </head>
 <body id="body">
 
-    <!--HEADER-->
+    <!-- HEADER -->
     <header id="header">
-        <nav id="nav">
-            <section class="section-title-logo">
-            <a href="#"><img src="icons/logo-drew.png" alt="logo-drew" class="header-logo"></a>
-            <a href="../index.html"><h1>DREW</h1></a>
-            </section>
+        <nav class="navbar navbar-expand-md" id="nav">
+            <div class="header__marca">
+                <a href="#" class="header__enlace-logo">
+                    <img src="icons/logo-drew.png" alt="Logo Drew" class="header__imagen-logo">
+                </a>
+                <a href="#" class="header__enlace-titulo">
+                    <h1 class="header__titulo">DREW</h1>
+                </a>
+            </div>
 
-            <section class="section-header">
-                <ul>
-                    <li><a href="pages/catalogo.html">CATÁLOGO</a></li>
-                    <li><a href="pages/ubicacion.html">UBICACIÓN</a></li>
-                    <li><a href="pages/nosotros.html">NOSOTROS</a></li>
-                    <li><a href="pages/contacto.html">CONTACTO</a></li>
-                </ul>
-                <div class="navUserCart">
-                    <i class="fa-solid fa-user fa-2xl"></i>
-                    <i class="fa-solid fa-cart-plus fa-2xl"></i>
+            <!-- BOOTSTRAP BOTON HAMBURGUESA -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="header__menu">
+                    <ul class="header__lista">
+                        <li class="header__item"><a href="pages/catalogo.html" class="header__enlace">CATÁLOGO</a></li>
+                        <li class="header__item"><a href="pages/ubicacion.html" class="header__enlace">UBICACIÓN</a></li>
+                        <li class="header__item"><a href="pages/nosotros.html" class="header__enlace">NOSOTROS</a></li>
+                        <li class="header__item"><a href="pages/contacto.html" class="header__enlace">CONTACTO</a></li>
+                    </ul>
+                    <div class="header__acciones">
+                        <i class="header__icono fa-solid fa-user fa-2xl"></i>
+                        <i class="header__icono fa-solid fa-cart-plus fa-2xl"></i>
+                    </div>
                 </div>
-            </section>
+            </div>
         </nav>
     </header>
 
-    <!--MAIN-->
+    <!-- MAIN -->
     <main id="main">
-        <section class="search">
-            <input type="search" placeholder="  Search">
-        </section>
+        <div class="buscador">
+            <input type="search" class="buscador__input" placeholder="Buscar">
+        </div>
 
-    <!--BOOTSTRAP CARRUSEL-->
+        <!-- BOOTSTRAP CARROUSEL -->
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -51,91 +63,112 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="foto-oferta">
+                    <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="Oferta destacada">
                 </div>
                 <div class="carousel-item">
-                <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="foto-oferta">
+                    <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="Oferta destacada">
                 </div>
                 <div class="carousel-item">
-                <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="foto-oferta">
+                    <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="Oferta destacada">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+                <span class="visually-hidden">Anterior</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+                <span class="visually-hidden">Siguiente</span>
             </button>
-            </div>
-            <!--CIERRE DE BOOTSTRAP CARRUSEL-->
+        </div>
 
-            <p class="p-inicio">NUESTRAS DESTACADAS</p>
-        <article class="article-p">
-            <section>
-                <img class="main-foto-destacada" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="main-p-destacada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+        <h2 class="main__titulo-destacados">NUESTRAS DESTACADAS</h2>
+        <div class="main__productos">
+            <article class="productos">
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
 
-            <section>
-                <img class="main-foto-destacada" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="main-p-destacada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
 
-            <section>
-                <img class="main-foto-destacada" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="main-p-destacada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
 
-            <section>
-                <img class="main-foto-destacada" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="main-p-destacada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
 
-            <section>
-                <img class="main-foto-destacada" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="main-p-destacada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
 
-            <section>
-                <img class="main-foto-destacada" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="main-p-destacada">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
-        </article>
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
 
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
 
+                <div class="producto">
+                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                </div>
+            </article>
+        </div>
     </main>
 
-    <!--FOOTER-->
+    <!-- FOOTER -->
     <footer id="footer">
-        <section class="footer-news">
-            <div class="mb-3">
-                <h4>Sé el primero en conocer nuestras ofertas y novedades!</h4>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
-        </section>
-        <div class="footer-logoRedes">
-        <section class="footer-redes">
-            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+        <section class="footer__novedades">
+            <h4 class="footer__titulo">¡Sé el primero en conocer nuestras ofertas y novedades!</h4>
+            <input type="email" class="footer__input form-control" placeholder="correo@ejemplo.com">
         </section>
 
-        <section class="footer-logo">
-            <a href="#"><img src="icons/logo-drew.png" alt="logo-drew"></a>
+        <section class="footer__contenido">
+            <section class="redes">
+                <div class="redes__grupo">
+                    <a href="https://www.instagram.com/" class="redes__enlace">
+                        <i class="redes__icono fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.facebook.com/" class="redes__enlace">
+                        <i class="redes__icono fa-brands fa-facebook"></i>
+                    </a>
+                </div>
+
+                <a href="#" class="footer__enlace-logo">
+                    <img src="icons/logo-drew.png" alt="Logo Drew" class="footer__logo">
+                </a>
+
+                <div class="redes__grupo">
+                    <a href="https://www.x.com/" class="redes__enlace">
+                        <i class="redes__icono fa-brands fa-x-twitter"></i>
+                    </a>
+                    <a href="https://www.tiktok.com/" class="redes__enlace">
+                        <i class="redes__icono fa-brands fa-tiktok"></i>
+                    </a>
+                </div>
+            </section>
         </section>
 
-        <section class="footer-redes2">
-            <a href="https://www.x.com/"><i class="fa-brands fa-x-twitter"></i></a>
-            <a href="https://www.tiktok.com/"><i class="fa-brands fa-tiktok"></i></a>
-        </section>
-        </div>
-        <section class="footer-toggle">
-            <p class="d-inline-flex gap-1">
-                <button type="button" class="btn" data-bs-toggle="button"><i class="fa-solid fa-toggle-on fa-2xl"></i></button>
-            </p>
+        <section class="tema">
+            <button type="button" class="tema__boton btn" data-bs-toggle="button">
+                <i class="tema__icono fa-solid fa-toggle-on fa-2xl"></i>
+            </button>
         </section>
     </footer>
+
+    <!-- SCRIPT DE BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
