Rediseñando pagina web

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -17,10 +17,10 @@
         <nav class="navbar navbar-expand-md" id="nav">
             <div class="header__marca">
                 <a href="../index.html" class="header__enlace-logo">
-                    <img src="../icons/logo-drew.png" alt="Logo Drew" class="header__imagen-logo">
+                    <img src="../icons/logo-kurta.png" alt="logo-kurta" class="header__imagen-logo">
                 </a>
                 <a href="../index.html" class="header__enlace-titulo">
-                    <h1 class="header__titulo">DREW</h1>
+                    <h1 class="header__titulo">KURTA</h1>
                 </a>
             </div>
 
@@ -64,89 +64,115 @@
             </select>
         </div>
 
-        <article class="productos">
+        <div class="main__productos">
+            <article class="productos">
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/buzoNegro-hisoka.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x Hisoka Morrow</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/buzoNegro-hxh.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x HunterxHunter</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/buzoNegro-itachi.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x Itachi Uchiha</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/buzoNegro-ichigo.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x Ichigo</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/buzoNegro-itachi2.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x Itachi Uchiha</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/buzoNegro-shingeki.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x AOT</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/buzoNegro-codegeass.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x Code Geass</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraNegra-EMA.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Negra x AOT </a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraNegra-goku.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Negra x Goku UI</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraNegra-ichigo.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Negra x Ichigo</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraNegra-itadori.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Negra x Itadori Yuuji </a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraNegra-killua.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Negra x Killua </a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
+                
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraBlanca-levi.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Blanca x Levi Ackerman</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraBlanca-sukuna.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Blanca x Sukuna</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
 
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
-
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
-
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
-
-            <section class="producto">
-                <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="main-foto-destacada">
-                <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-            </section>
-
-        </article>
+                <div class="producto">
+                    <img class="producto__imagen" src="../images/remeraBlanca-killua.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Blanca x Killua</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
+                </div>
+                
+            </article>
+        </div>
     </main>
 
 <!-- FOOTER -->
@@ -168,7 +194,7 @@
             </div>
 
             <a href="../index.html" class="footer__enlace-logo">
-                <img src="../icons/logo-drew.png" alt="Logo Drew" class="footer__logo">
+                <img src="../icons/logo-kurta.png" alt="logo-kurta" class="footer__logo">
             </a>
 
             <div class="redes__grupo">
