--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,10 +17,10 @@
             <nav class="navbar navbar-expand-md" id="nav">
                 <div class="header__marca">
                     <a href="../index.html" class="header__enlace-logo">
-                        <img src="../icons/logo-drew.png" alt="Logo Drew" class="header__imagen-logo">
+                        <img src="../icons/logo-kurta.png" alt="logo-kurta" class="header__imagen-logo">
                     </a>
                     <a href="../index.html" class="header__enlace-titulo">
-                        <h1 class="header__titulo">DREW</h1>
+                        <h1 class="header__titulo">KURTA</h1>
                     </a>
                 </div>
     
@@ -34,9 +34,9 @@
                     <div class="header__menu">
                         <ul class="header__lista">
                             <li class="header__item"><a href="catalogo.html" class="header__enlace">CATÁLOGO</a></li>
-                            <li class="header__item"><a href="#" class="header__enlace">UBICACIÓN</a></li>
+                            <li class="header__item"><a href="ubicacion.html" class="header__enlace">UBICACIÓN</a></li>
                             <li class="header__item"><a href="nosotros.html" class="header__enlace">NOSOTROS</a></li>
-                            <li class="header__item"><a href="contacto.html" class="header__enlace">CONTACTO</a></li>
+                            <li class="header__item"><a href="#" class="header__enlace">CONTACTO</a></li>
                         </ul>
                         <div class="header__acciones">
                             <i class="header__icono fa-solid fa-user fa-2xl"></i>
@@ -90,7 +90,7 @@
                 </div>
 
                 <a href="../index.html" class="footer__enlace-logo">
-                    <img src="../icons/logo-drew.png" alt="Logo Drew" class="footer__logo">
+                    <img src="../icons/logo-kurta.png" alt="logo-kurta" class="footer__logo">
                 </a>
 
                 <div class="redes__grupo">
