--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -16,10 +16,10 @@
         <nav class="navbar navbar-expand-md" id="nav">
             <div class="header__marca">
                 <a href="../index.html" class="header__enlace-logo">
-                    <img src="../icons/logo-drew.png" alt="Logo Drew" class="header__imagen-logo">
+                    <img src="../icons/logo-kurta.png" alt="logo-kurta" class="header__imagen-logo">
                 </a>
                 <a href="../index.html" class="header__enlace-titulo">
-                    <h1 class="header__titulo">DREW</h1>
+                    <h1 class="header__titulo">KURTA</h1>
                 </a>
             </div>
 
@@ -80,7 +80,7 @@
                 </div>
 
                 <a href="../index.html" class="footer__enlace-logo">
-                    <img src="../icons/logo-drew.png" alt="Logo Drew" class="footer__logo">
+                    <img src="../icons/logo-kurta.png" alt="logo-kurta" class="footer__logo">
                 </a>
 
                 <div class="redes__grupo">
