--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <nav class="navbar navbar-expand-md" id="nav">
             <div class="header__marca">
                 <a href="#" class="header__enlace-logo">
-                    <img src="icons/logo-drew.png" alt="Logo Drew" class="header__imagen-logo">
+                    <img src="icons/logo-kurta.png" alt="logo-kurta" class="header__imagen-logo">
                 </a>
                 <a href="#" class="header__enlace-titulo">
-                    <h1 class="header__titulo">DREW</h1>
+                    <h1 class="header__titulo">KURTA</h1>
                 </a>
             </div>
 
@@ -63,13 +63,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="Oferta destacada">
+                    <img src="images/buzoNegro-carrousel.jpg" class="d-block w-100" alt="Oferta destacada">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="Oferta destacada">
+                    <img src="images/remeraNegra-carrousel.jpg" class="d-block w-100" alt="Oferta destacada">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://dvigi.com.ar/cdn/shop/collections/arg.jpg?v=1734124399&width=2400" class="d-block w-100" alt="Oferta destacada">
+                    <img src="images/remeraBlanca-carrousel.jpg" class="d-block w-100" alt="Oferta destacada">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -85,45 +85,49 @@
         <h2 class="main__titulo-destacados">NUESTRAS DESTACADAS</h2>
         <div class="main__productos">
             <article class="productos">
+
                 <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                    <img class="producto__imagen" src="images/buzoNegro-hxh.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x HunterxHunter</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
 
                 <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                    <img class="producto__imagen" src="images/buzoNegro-itachi.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Buzo Negro x Itachi Uchiha</a>
+                    <h3>$60.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
 
                 <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                    <img class="producto__imagen" src="images/remeraNegra-goku.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Negra x Goku UI</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
 
                 <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                    <img class="producto__imagen" src="images/remeraBlanca-levi.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Blanca x Levi Ackerman</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
 
                 <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                    <img class="producto__imagen" src="images/remeraBlanca-sukuna.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Blanca x Sukuna</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
 
                 <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
+                    <img class="producto__imagen" src="images/remeraBlanca-killua.jpg" alt="Producto destacado">
+                    <a href="#" class="producto__titulo">Remera Blanca x Killua</a>
+                    <h3>$30.000,00</h3>
+                    <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
-
-                <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-                </div>
-
-                <div class="producto">
-                    <img class="producto__imagen" src="https://www.thefutbolstore.com.ar/uploads/v2/product/lo/TS1704_210_A.jpg" alt="Producto destacado">
-                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, reprehenderit.</p>
-                </div>
+                
             </article>
         </div>
     </main>
@@ -132,7 +136,7 @@
     <footer id="footer">
         <section class="footer__novedades">
             <h4 class="footer__titulo">¡Sé el primero en conocer nuestras ofertas y novedades!</h4>
-            <input type="email" class="footer__input form-control" placeholder="correo@ejemplo.com">
+            <input type="text" class="footer__input form-control" placeholder="correo@ejemplo.com">
         </section>
 
         <section class="footer__contenido">
@@ -147,7 +151,7 @@
                 </div>
 
                 <a href="#" class="footer__enlace-logo">
-                    <img src="icons/logo-drew.png" alt="Logo Drew" class="footer__logo">
+                    <img src="icons/logo-kurta.png" alt="logo-kurta" class="footer__logo">
                 </a>
 
                 <div class="redes__grupo">
