arreglando el responsive

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -152,7 +152,7 @@
                 
                 <div class="producto">
                     <img class="producto__imagen" src="../images/remeraBlanca-levi.jpg" alt="Producto destacado">
-                    <a href="#" class="producto__titulo">Remera Blanca x Levi Ackerman</a>
+                    <a href="#" class="producto__titulo">Remera Blanca x Levi</a>
                     <h3>$30.000,00</h3>
                     <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
