--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
                 <div class="producto">
                     <img class="producto__imagen" src="images/buzoNegro-hxh.jpg" alt="Producto destacado">
-                    <a href="#" class="producto__titulo">Buzo Negro x HunterxHunter</a>
+                    <a href="#" class="producto__titulo">Buzo Negro x HxH</a>
                     <h3>$60.000,00</h3>
                     <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
 
                 <div class="producto">
                     <img class="producto__imagen" src="images/buzoNegro-itachi.jpg" alt="Producto destacado">
-                    <a href="#" class="producto__titulo">Buzo Negro x Itachi Uchiha</a>
+                    <a href="#" class="producto__titulo">Buzo Negro x Itachi</a>
                     <h3>$60.000,00</h3>
                     <p class="producto__descripcion">10% Descuento Tranferencias y Efectivo</p>
                 </div>
