--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,18 +55,18 @@
                 <p>Telefono: +54 (348) 4123-456</p>
                 <p>Correo Electronico: proyectocoderhousefranco@gmail.com</p>
                 <h2>DUDAS FRECUENTES</h2>
-                <p>¿Qué tipo de ropa ofrecen?
-                    En nuestro catálogo encontrarás una amplia variedad de prendas para todos los estilos, incluyendo ropa casual, formal y deportiva. Trabajamos con diseños modernos y materiales de alta calidad para garantizar tu comodidad y satisfacción.</p>
-                <p>¿Cómo sé cuál es mi talla?
-                    En cada producto encontrarás una guía de tallas detallada que te ayudará a elegir la opción que mejor se adapte a ti. Si tienes dudas, puedes contactarnos y con gusto te asesoraremos.</p>
-                <p>¿Hacen envíos a todo el país?
-                    ¡Sí! Realizamos envíos a cualquier parte del país. El costo del envío y el tiempo de entrega varían según tu ubicación. Durante el proceso de compra, podrás conocer los detalles específicos.</p>
-                <p>¿Cuál es el tiempo estimado de entrega?
-                    El tiempo de entrega dependerá de tu ubicación. Generalmente, los envíos tardan entre 3 y 7 días hábiles. Te enviaremos un número de seguimiento para que puedas monitorear tu pedido.</p>
-                <p>¿Aceptan devoluciones o cambios?
-                    Sí, ofrecemos devoluciones y cambios dentro de los primeros 15 días después de recibir tu pedido, siempre que las prendas estén en perfectas condiciones y con sus etiquetas originales. Para más información, revisa nuestra política de cambios y devoluciones.</p>
-                <p>¿Qué métodos de pago aceptan?
-                    Aceptamos pagos con tarjetas de crédito, débito, transferencias bancarias y plataformas como PayPal o Mercado Pago (según tu ubicación). Queremos que tu experiencia de compra sea lo más sencilla posible.</p>
+                <h3>¿Qué tipo de ropa ofrecen?</h3>
+                <p>En nuestro catálogo encontrarás una amplia variedad de prendas para todos los estilos, incluyendo ropa casual, formal y deportiva. Trabajamos con diseños modernos y materiales de alta calidad para garantizar tu comodidad y satisfacción.</p>
+                <h3>¿Cómo sé cuál es mi talla?</h3>
+                <p>En cada producto encontrarás una guía de tallas detallada que te ayudará a elegir la opción que mejor se adapte a ti. Si tienes dudas, puedes contactarnos y con gusto te asesoraremos.</p>
+                <h3>¿Hacen envíos a todo el país?</h3>
+                <p>¡Sí! Realizamos envíos a cualquier parte del país. El costo del envío y el tiempo de entrega varían según tu ubicación. Durante el proceso de compra, podrás conocer los detalles específicos.</p>
+                <h3>¿Cuál es el tiempo estimado de entrega?</h3>
+                <p>El tiempo de entrega dependerá de tu ubicación. Generalmente, los envíos tardan entre 3 y 7 días hábiles. Te enviaremos un número de seguimiento para que puedas monitorear tu pedido.</p>
+                <h3>¿Aceptan devoluciones o cambios?</h3>
+                <p>Sí, ofrecemos devoluciones y cambios dentro de los primeros 15 días después de recibir tu pedido, siempre que las prendas estén en perfectas condiciones y con sus etiquetas originales. Para más información, revisa nuestra política de cambios y devoluciones.</p>
+                <h3>¿Qué métodos de pago aceptan?</h3>
+                <p>Aceptamos pagos con tarjetas de crédito, débito, transferencias bancarias y plataformas como PayPal o Mercado Pago (según tu ubicación). Queremos que tu experiencia de compra sea lo más sencilla posible.</p>
             </section>
         </div>
     </main>
