removi la copia de style

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora el catálogo de Kurta y encuentra ropa de anime inspirada en Hunter x Hunter, Jujutsu Kaisen, Attack on Titan, Naruto, Dragon Ball y Bleach. ¡Descubre tus diseños favoritos!">
+    <meta name="keywords" content="catálogo Kurta, ropa de anime, Hunter x Hunter, Jujutsu Kaisen, Attack on Titan, Naruto, Dragon Ball, Bleach, camisetas de anime, sudaderas anime, moda otaku, anime merch">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
