--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kurta: la tienda de ropa de anime con diseños exclusivos de tus series favoritas como Attack on Titan, Naruto, Dragon Ball y Bleach. ¡Viste tu pasión por el anime!">
+    <meta name="keywords" content="ropa de anime, Kurta, Hunter x Hunter, Jujutsu Kaisen, Attack on Titan, Naruto, Dragon Ball, Bleach, camisetas de anime, sudaderas de anime, moda otaku, ropa temática, anime merch">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Inicio</title>
+    <title>KURTA INDUMENTARIA</title>
 </head>
 <body id="body">
 
