--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conoce Kurta: una marca apasionada por el anime y la moda. Creamos ropa inspirada en Hunter x Hunter, Jujutsu Kaisen, Attack on Titan, Naruto, Dragon Ball y Bleach. ¡Únete a nuestra comunidad!">
+    <meta name="keywords" content="sobre Kurta, quiénes somos, ropa de anime, Hunter x Hunter, Jujutsu Kaisen, Attack on Titan, Naruto, Dragon Ball, Bleach, moda anime, comunidad otaku, marca de anime">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
