--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encuentra Kurta fácilmente. Descubre nuestra ubicación y ven a explorar nuestra colección de ropa de anime inspirada en tus series favoritas como Hunter x Hunter, Naruto y más.">
+    <meta name="keywords" content="ubicación Kurta, dónde estamos, tienda de ropa anime en Argentina, Hunter x Hunter, Jujutsu Kaisen, Attack on Titan, Naruto, Dragon Ball, Bleach, ropa otaku Argentina, dirección Kurta Argentina">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
